--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prettier": "^2.7.1"
   },
   "scripts": {
-    "prettier": "prettier --check ./src/*.js"
+    "prettier-check": "prettier --check ./src/*.js",
+    "prettier-write": "prettier --write ./src/*.js"
   }
 }
